# spellntnt

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  main.c  main.h  progConfig.c  progConfig.h
