#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([pagwin_spellcheck], [0.1], [bugs@pagwin.xyz])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_FILES([Makefile])
AM_INIT_AUTOMAKE()
# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB(aspell,new_aspell_config)
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
